# LeafMeHard

./: Cargo.toml  Nargo.toml  README.md  create_real_prover.py
circuit-comparision/: README.md  test_input_16.txt
circuit-comparision/leo_merkle/: #test_input_16.txt#  .#test_input_16.txt  program.json  program.json~  test_input.json  test_input.txt  test_input.txt~  test_input_16.txt  test_input_16.txt~
circuit-comparision/leo_merkle/src/: main.leo
circuit-comparision/leo_merkle/tests/: test_leo_merkle.leo
circuit-comparision/noir_merkle_inclusion/: Nargo.toml  Nargo.toml~  Prover.toml
circuit-comparision/noir_merkle_inclusion/src/: main.nr
circuit-comparision/noir_merkle_inclusion/witness/: noir_merkle_inclusion.json
circuit-comparision/plonky3-merkle-tree/: Cargo.toml  README.md
circuit-comparision/plonky3-merkle-tree/src/: main.rs
lib/: Nargo.toml
lib/src/: blake2b.nr  const.nr  lib.nr  node.nr  polkadot_const.nr  polkadot_multi_proof.nr  polkadot_multi_proof_backup.nr  polkadot_trie_proof.nr  rlp.nr  scale.nr  state_proof.nr  storage_proof.nr  storage_proof_test.nr  trie_proof.nr  utils.nr  utils_test.nr
minimal_verifier/: Nargo.toml
minimal_verifier/src/: main.nr
src/: bin.rs  lib.rs
tests/blake2b_test/: Nargo.toml  Prover.toml
tests/blake2b_test/src/: main.nr
tests/depth_8_state_proof/src/: main.nr
tests/depth_8_storage_proof/: Prover.toml
tests/depth_8_storage_proof/src/: main.nr
tests/polkadot_test/: Nargo.toml
tests/polkadot_test/src/: main.nr
tests/trie_test/: Nargo.toml  Prover.toml
tests/trie_test/src/: main.nr
