[package]
name = "plonky3_merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = { version = "0.9.0", default-features = true, features = ["small_rng"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0", features = ["serde"]  }

[patch.'https://github.com/Plonky3/Plonky3']
p3-air = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-field = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-matrix = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-mersenne-31 = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-util = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-baby-bear = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-challenger = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-circle = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-commit = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-dft = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-fri = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-goldilocks = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-blake3 = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-keccak = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-mds = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-merkle-tree = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-poseidon = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-poseidon2 = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-poseidon2-air = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks"}
p3-symmetric = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
p3-uni-stark = { git = "https://github.com/w3f/Plonky3.git", branch="skalman--poseidon2-air-tweaks" }
